Fixed alignment of Feed, Widgets and Profile Components

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .app {
+  align-items: center;
   background-color: #f3f2ef;
   display: flex;
   flex-direction: column;
 }
 .app__body {
   display: flex;
+
   margin-top: 35px;
   max-width: 1200px;
   margin-left: 20px;
